add response stats

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
 /badminton/go_build_badminton_booking_badminton
-/badminton/database.db
 /badminton/badminton.exe
+/badminton/database.db
+/badminton/logs/
