--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,12 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: cd badminton && go build -v ./...
+      run: cd badminton && go build
 
-    - name: Test
-      run: cd badminton && go test -v ./...
+    - name: Release
+      uses: "marvinpinto/action-automatic-releases@latest"
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        prerelease: false
+        files: |
+          badminton
