--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,5 +29,7 @@ jobs:
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         prerelease: false
+        automatic_release_tag: "latest"
+        title: "Development Build"
         files: |
           badminton
