--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,4 +32,4 @@ jobs:
         automatic_release_tag: "latest"
         title: "Development Build"
         files: |
-          badminton
+          badminton/badminton
