--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: cd badminton && go build
+      run: cd badminton && GOOS=linux GOARCH=amd64 go build -o badminton.linux && GOOS=darwin GOARCH=amd64 go build -o badminton.mac
 
     - name: Release
       uses: "marvinpinto/action-automatic-releases@latest"
@@ -32,4 +32,5 @@ jobs:
         automatic_release_tag: "latest"
         title: "Development Build"
         files: |
-          badminton/badminton
+          badminton/badminton.linux
+          badminton/badminton.mac
