--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Go Build & Release
 
 on:
   push:
@@ -10,9 +10,7 @@ on:
     branches: [ "master" ]
   workflow_dispatch:
 
-
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -24,15 +22,18 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: cd badminton && GOOS=linux GOARCH=amd64 go build -o badminton.linux && GOOS=darwin GOARCH=amd64 go build -o badminton.mac
+      run: |
+        cd badminton
+        GOOS=linux GOARCH=amd64 go build -o badminton.linux
+        GOOS=darwin GOARCH=amd64 go build -o badminton.mac
 
     - name: Release
-      uses: "marvinpinto/action-automatic-releases@latest"
+      uses: softprops/action-gh-release@v1
       with:
-        repo_token: "${{ secrets.RELEASE }}"
-        prerelease: false
-        automatic_release_tag: "latest"
-        title: "Development Build"
+        name: "Build ${{ github.run_number }}"
+        tag_name: "build-${{ github.run_id }}"
         files: |
           badminton/badminton.linux
           badminton/badminton.mac
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
