--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,13 +6,14 @@ name: Go Build & Release
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      actions: read
     steps:
     - uses: actions/checkout@v4
 
@@ -31,9 +32,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         name: "Build ${{ github.run_number }}"
-        tag_name: "build-${{ github.run_id }}"
+        tag_name: "v0.1.${{ github.run_number }}"
         files: |
           badminton/badminton.linux
           badminton/badminton.mac
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
